Bug fix on tablet repsonsive for base main navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,10 +108,6 @@ h4 {
     color: white;
 }
 
-li.nav-item {
-    margin: 0px 15px;
-}
-
 .card.shadow-sm.border.border-5 {
     height: 300px;
 }
